--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/zachprinz/trivia_project#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "hbs": "^4.0.1",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.5",
     "mustache": "^2.2.1"
   }
 }
