--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "mustache": "^2.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1"
   }
 }
