--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.14.0",
     "hbs": "^4.0.1",
     "mongoose": "^4.6.5",
-    "mustache": "^2.2.1"
+    "mustache": "^2.2.1",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
